@@ -31,6 +31,13 @@ using namespace OpenBabel;
 
 int main (int argc, char **argv)
 {
+  // Define location of file formats for testing
+  #ifdef FORMATDIR
+    char env[BUFF_SIZE];
+    snprintf(env, BUFF_SIZE, "BABEL_LIBDIR=%s", FORMATDIR);
+    putenv(env);
+  #endif
+
   OBMol mol;
   OBConversion conv;
   conv.SetInFormat("smi");
