@@ -219,6 +219,13 @@ void genericSmilesCanonicalTest(const std::string &smiles)
 
 int main() 
 {
+  // Define location of file formats for testing
+  #ifdef FORMATDIR
+    char env[BUFF_SIZE];
+    snprintf(env, BUFF_SIZE, "BABEL_LIBDIR=%s", FORMATDIR);
+    putenv(env);
+  #endif
+
   testTetrahedralStereo1();
   
   // Tetrahedral
